# ITMO_RGR2_Triangulation

./: Application.cpp  Application.h  CMakeLists.txt  Polygon.cpp  Polygon.h  Utils.h  Vert.cpp  Vert.h  main.cpp
